@@ -2,6 +2,8 @@ Revision history for Perl module Getopt::Lucid
 
 0.19
 
+    - Added getopts() as an alias for getopt()
+
 0.18 Thu Mar 12 00:11:11 EDT 2009
     - Options with validation specs will not fail just because the option
       is not seen on the command line.  Validation is now only done on default
